# verdun

./: .gitignore  .vercelignore  APP.md  CHANGELOG.md  Cargo.toml  DATABASE_RELOAD.md  EXTERNAL_APP.md  PUBLIC_SURFACE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.package.json  vercel.json  vite.config.ts
crawler/: Cargo.toml  README.md
crawler/config/: watchlist.toml
crawler/data/: items.json  newsletter-draft.md  source-runs.json
crawler/instances/demo/: config.toml
crawler/instances/demo/fixtures/: diagnostics.json  records.json
crawler/instances/garbage/: watchlist.toml
crawler/instances/garbage/manual/: linkedin.json  x-twitter.json
crawler/instances/greathouse/: config.toml
crawler/instances/greathouse/fixtures/: browser-diagnostics.json  diagnostics.json  listings.json  redfin-listings.json  zillow-listings.json
crawler/src/: cache.rs  checkpoint.rs  core.rs  db.rs  http.rs  lib.rs  main.rs  progress.rs  runtime.rs  sdk.rs
crawler/src/geocode/: mod.rs  tests.rs
crawler/src/instances/: bundled.rs  demo.rs  external.rs  garbage.rs  greathouse.rs  mod.rs
frontend/: workbench-style.css  workbench-ui.ts  workbench-view.ts
scripts/: apply-newsletter-sql.mjs  check-deployed.mjs  check-preview.mjs  database-reload-handoff.mjs  deploy-database.mjs  deploy-workbench-database.mjs  garbage-draft.mjs  generate-vercel-config.mjs  grust-watchlist-audit.mjs  instance-command-runner.mjs  newsletter-draft.mjs  publish-ghost.mjs  smoke-account-store.mjs  smoke-all.mjs  smoke-api-http.mjs  smoke-api-local.mjs  smoke-app.mjs  smoke-browser.mjs  smoke-check-deployed-readiness.mjs  smoke-crawler-dedupe.mjs  smoke-crawler-instance.mjs  smoke-crawler-queries.mjs  smoke-db-apply.mjs  smoke-db-deploy.mjs  smoke-demo-workbench.mjs  smoke-draft-api.mjs  smoke-draft-local.mjs  smoke-draft-url.mjs  smoke-feed-content.mjs  smoke-generic-loader-sql.mjs  smoke-ghost.mjs  smoke-greathouse-workbench.mjs  smoke-grust-watchlist.mjs  smoke-health-api.mjs  smoke-loader-sql.mjs  smoke-public-snapshot-coverage.mjs  smoke-public-surface.mjs  smoke-readiness.mjs  smoke-responsive.mjs  (+7 more)
src/: App.vue  (+1 more)
(+158 files in other folders)
