[package]
name = "verdun-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "gzip", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
