[package]
name = "verdun-crawler"
version = "0.1.0"
edition = "2024"
description = "Reusable crawler SDK and database reload runtime for Verdun workbench apps"
readme = "README.md"
repository = "https://github.com/alexy/verdun"
keywords = ["crawler", "database", "workbench", "vercel"]
categories = ["command-line-utilities", "database"]

[features]
default = []
# Live Postgres access from Rust (connect-from-env over rustls TLS). Apps that
# only export SQL can leave this off and avoid the Postgres/TLS dependency stack.
db = ["dep:tokio", "dep:tokio-postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "gzip", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }
tokio-postgres = { version = "0.7.12", optional = true }
tokio-postgres-rustls = { version = "0.13.0", optional = true }
rustls = { version = "0.23.0", default-features = false, features = ["ring", "std", "tls12", "logging"], optional = true }
webpki-roots = { version = "0.26.7", optional = true }
